--- a/aslam_cv/aslam_cameras_april/CMakeLists.txt
+++ b/aslam_cv/aslam_cameras_april/CMakeLists.txt
@@ -2,19 +2,19 @@ cmake_minimum_required(VERSION 2.8.3)
 project(aslam_cameras_april)
 
 find_package(catkin_simple REQUIRED)
-catkin_simple()
+find_package(OpenCV 3 REQUIRED)
 
-find_package(OpenCV REQUIRED)
+catkin_simple()
 
 ADD_DEFINITIONS(-DASLAM_USE_ROS )
 include_directories(${Eigen_INCLUDE_DIRS})
 
 
-cs_add_library(${PROJECT_NAME} 
+cs_add_library(${PROJECT_NAME}
   src/GridCalibrationTargetAprilgrid.cpp
   )
 
-find_package(Boost REQUIRED COMPONENTS serialization system) 
+find_package(Boost REQUIRED COMPONENTS serialization system)
 
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
