--- a/aslam_cv/aslam_cv_serialization/CMakeLists.txt
+++ b/aslam_cv/aslam_cv_serialization/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(aslam_cv_serialization)
 
 find_package(catkin_simple REQUIRED)
+find_package(OpenCV 3 REQUIRED)
+
 catkin_simple()
 
 #common commands for building c++ executables and libraries
