--- a/aslam_cv/aslam_cv_backend_python/CMakeLists.txt
+++ b/aslam_cv/aslam_cv_backend_python/CMakeLists.txt
@@ -2,11 +2,13 @@ cmake_minimum_required(VERSION 2.8.3)
 project(aslam_cv_backend_python)
 
 find_package(catkin_simple REQUIRED)
+find_package(OpenCV 3 REQUIRED)
+
 
 catkin_simple()
 
 add_python_export_library(${PROJECT_NAME} python/aslam_cv_backend
-  src/module.cpp  
+  src/module.cpp
   src/GridCalibration.cpp
   # src/CameraGeometryDesignVariableContainer.cpp
 #  src/NCameraSystemDesignVariableContainer.cpp
